<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="currency_summary_format" translatable="false">%1$s  %2$s (%3$s)</string>
    <string name="update_progress_format" translatable="false">%1$s%%</string>
    <string name="symbol_transfer" translatable="false"><![CDATA[->]]></string>
    <string name="symbol_calculator_clear" translatable="false">C</string>
    <string name="symbol_calculator_equals" translatable="false">=</string>
    <string name="symbol_calculator_plus" translatable="false">+</string>
    <string name="symbol_calculator_minus" translatable="false">-</string>
    <string name="symbol_calculator_times" translatable="false">×</string>
    <string name="symbol_calculator_div" translatable="false">÷</string>
    <string name="symbol_calculator_bracket" translatable="false">()</string>
    <string name="symbol_calculator_bracket_start" translatable="false">(</string>
    <string name="symbol_calculator_bracket_end" translatable="false">)</string>
    <string name="symbol_calculator_point" translatable="false">.</string>
    <string name="symbol_calculator_zero" translatable="false">0</string>
    <string name="symbol_calculator_one" translatable="false">1</string>
    <string name="symbol_calculator_two" translatable="false">2</string>
    <string name="symbol_calculator_three" translatable="false">3</string>
    <string name="symbol_calculator_four" translatable="false">4</string>
    <string name="symbol_calculator_five" translatable="false">5</string>
    <string name="symbol_calculator_six" translatable="false">6</string>
    <string name="symbol_calculator_seven" translatable="false">7</string>
    <string name="symbol_calculator_eight" translatable="false">8</string>
    <string name="symbol_calculator_nine" translatable="false">9</string>
    <string name="github" translatable="false">Github</string>
    <string name="gitee" translatable="false">Gitee</string>
    <string name="symbol_arrow_right" translatable="false"><![CDATA[>>>]]></string>
    <string name="default_currency_format">%1$s（默认）</string>
    <string name="app_name">记账本</string>
    <string name="default_books">默认账本</string>
    <string name="press_again_to_exit">再次返回退出</string>
    <string name="search">搜索</string>
    <string name="my_books">我的账本</string>
    <string name="current_month_spending">本月支出</string>
    <string name="current_month_income">本月收入</string>
    <string name="current_month_balance">本月结余</string>
    <string name="confirm">确认</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="more">更多</string>
    <string name="cancel">取消</string>
    <string name="no_longer_prompt">不再提示</string>
    <string name="delete_books_confirm">删除账本将同步删除账本下所有记账记录，是否确认？</string>
    <string name="add">添加</string>
    <string name="cannot_delete_selected_books">无法删除已选中账本</string>
    <string name="edit_books">编辑账本</string>
    <string name="top_preview_num">2000</string>
    <string name="top_preview">预览效果</string>
    <string name="top_img_bg_optional">顶部图片背景（可选）</string>
    <string name="books_name">账本名称</string>
    <string name="books_description">账本说明</string>
    <string name="books_description_optional">账本说明（可选）</string>
    <string name="books_name_cannot_be_empty">账本名称不能为空</string>
    <string name="books_name_already_exists">账本名称已存在</string>
    <string name="modify_time_with_colon">修改时间：</string>
    <string name="spending">支出</string>
    <string name="income">收入</string>
    <string name="transfer">转账</string>
    <string name="account">账户</string>
    <string name="tags">标签</string>
    <string name="charge">手续费</string>
    <string name="reimbursable">可报销</string>
    <string name="please_enter_remarks_here">请在此输入备注</string>
    <string name="today">今天</string>
    <string name="select_an_asset">选择一个资产账户</string>
    <string name="select_asset_classification">选择资产分类</string>
    <string name="select_asset_dialog_hint">不能选择隐藏的资产</string>
    <string name="select_bank">选择银行</string>
    <string name="new_asset">新建资产</string>
    <string name="asset_classification">资产分类</string>
    <string name="asset_name">资产名称</string>
    <string name="open_bank">开户行</string>
    <string name="card_no">卡号</string>
    <string name="asset_balance">资产余额</string>
    <string name="total_amount">总额度</string>
    <string name="billing_date">账单日</string>
    <string name="please_select">请选择</string>
    <string name="repayment_date">还款日</string>
    <string name="invisible_asset">隐藏资产</string>
    <string name="invisible_asset_hint">隐藏不使用的资产，将不会在资产列表显示</string>
    <string name="save">保存</string>
    <string name="current_arrears">当前欠款</string>
    <string name="edit_asset">编辑资产</string>
    <string name="asset_name_cannot_be_empty">资产名称不能为空</string>
    <string name="save_success">保存成功</string>
    <string name="my_asset">我的资产</string>
    <string name="net_assets">净资产</string>
    <string name="total_assets">总资产</string>
    <string name="total_liabilities">总负债</string>
    <string name="nothing">无</string>
    <string name="used_with_colon_format">已用：%1$s</string>
    <string name="total_amount_must_be_greater_than_zero">总额度必须大于0</string>
    <string name="edit">编辑</string>
    <string name="hidden">隐藏</string>
    <string name="hidden_hint">隐藏后将不在此列表展示，且记账时不能选择</string>
    <string name="add_asset">添加资产</string>
    <string name="cancel_hidden">取消隐藏</string>
    <string name="homepage_no_record_hint">当前页仅显示当前月份记录！</string>
    <string name="no_asset_hint">你还没有资产哦，快来添加吧！</string>
    <string name="no_invisible_asset_hint">隐藏的资产将不会显示在资产列表，并且记账时也无法选择</string>
    <string name="do_not_select_account">不选择账户</string>
    <string name="account_show_format">%1$s（%2$s）</string>
    <string name="classification">分类</string>
    <string name="setting">设置</string>
    <string name="record_charge_hint">扣款金额=转账金额+手续费</string>
    <string name="into_account">转入账户</string>
    <string name="into_with_colon">转入：</string>
    <string name="amount_can_not_be_zero">金额不能为0</string>
    <string name="please_select_type">请选择类型</string>
    <string name="balance_adjustment">余额调整</string>
    <string name="billing_details">账单详情</string>
    <string name="amount">金额</string>
    <string name="asset">资产</string>
    <string name="remark">备注</string>
    <string name="time">时间</string>
    <string name="debt_total_format">入%1$s，出%2$s</string>
    <string name="please_select_asset">请选择资产</string>
    <string name="please_select_into_asset">请选择转入资产</string>
    <string name="income_with_colon">收：</string>
    <string name="expenditure_with_colon">支：</string>
    <string name="symbol_comma">，</string>
    <string name="delete_record_confirm">确定要删除这条记录吗？</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="not_set">未设置</string>
    <string name="delete_asset_hint">确定要删除这个资产账户吗？将会执行如下操作：\n1.移除此资产账户相关联其他数据关系；\n2.删除与此账户相关的转账记录；\n3.移除账单中与此账户的关联信息。</string>
    <string name="associated_expenditure_record">关联的支出记录</string>
    <string name="select_associated_expenditure_record">选择关联的支出记录</string>
    <string name="refund_with_colon">退款：</string>
    <string name="reimburse_with_colon">报销：</string>
    <string name="refund_select_hint">近三个月大于退款金额的支出记录</string>
    <string name="reimburse_select_hint">近三个月标记为可报销支出记录</string>
    <string name="refunded_with_colon">已退款：</string>
    <string name="returned_with_colon">已报销：</string>
    <string name="associated_with_colon">已关联：</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_description">这是一个免费的、开源的软件，目的是为了更加便捷、稳定的记录生活中的相关开支，当然你也可以自己为它添加个性化的功能。</string>
    <string name="contact_me">联系我</string>
    <string name="please_select_browser">请选择浏览器</string>
    <string name="user_agreement_and_privacy_policy">用户协议和隐私政策</string>
    <string name="check_update">检查更新</string>
    <string name="associated_record">关联的记录</string>
    <string name="it_is_the_latest_version">已是最新版本</string>
    <string name="new_versions">新版本</string>
    <string name="update">更新</string>
    <string name="version_info">版本信息</string>
    <string name="update_resource">更新资源</string>
    <string name="update_need_permission">更新升级需要您同意权限申请</string>
    <string name="no_wifi_available_hint">未连接Wi-Fi，确定使用数据流量下载吗？</string>
    <string name="changelog">更新日志</string>
    <string name="use_mobile_network_download">使用数据流量下载</string>
    <string name="application_day_night">黑夜模式</string>
    <string name="day_night_light">浅色</string>
    <string name="day_night_night">深色</string>
    <string name="day_night_follow_system">跟随系统</string>
    <string name="please_select_application_day_night">请选择黑夜模式</string>
    <string name="select_day">选择日期</string>
    <string name="day">日</string>
    <string name="start_background_download">开始后台下载</string>
    <string name="select_tags">选择标签</string>
    <string name="select_tag_dialog_hint">可多选</string>
    <string name="create_tag">新建标签</string>
    <string name="tag_name">标签名称</string>
    <string name="tag_name_must_not_be_blank">标签名不能为空</string>
    <string name="same_tag_exist">已存在相同名称的标签</string>
    <string name="edit_tag">编辑标签</string>
    <string name="show_notification">显示通知</string>
    <string name="update_progress_title">下载进度</string>
    <string name="update_notification_progress">更新通知进度</string>
    <string name="hide_notification">取消通知</string>
    <string name="channel_update_name">应用升级</string>
    <string name="channel_update_description">该渠道用于通知更新下载进度</string>
    <string name="channel_app_name">应用通知</string>
    <string name="channel_app_description">该渠道用于通知应用信息</string>
    <string name="update_error_title">下载失败</string>
    <string name="retry">重试</string>
    <string name="sort">排序</string>
    <string name="sort_hint">长按可拖拽移动</string>
    <string name="keep_a_record">记一笔</string>
    <string name="asset_info">资产信息</string>
    <string name="application_details">应用详情</string>
    <string name="user_agreement_and_privacy_policy_hint">欢迎使用记账本APP！我们非常尊重并保护所有使用服务用户的个人隐私权，在使用记账本各项服务前，请您务必仔细阅读、透彻理解并同意接受《用户协议和隐私政策》后，再开始使用我们的服务。</string>
    <string name="disagree">不同意</string>
    <string name="agree">同意</string>
    <string name="user_agreement_and_privacy_policy_with_chevron">《用户协议和隐私政策》</string>
    <string name="edit_type_list_hint">长按可拖动排序</string>
    <string name="add_second_type">添加子类</string>
    <string name="statistics_data">统计数据</string>
    <string name="system_type_does_not_support_deletion">系统类型不支持删除</string>
    <string name="has_second_type_can_not_delete">该分类有二级分类，无法直接删除</string>
    <string name="new_type">新建分类</string>
    <string name="edit_type">编辑分类</string>
    <string name="first_type">一级分类</string>
    <string name="please_enter_type_name">请输入分类名称</string>
    <string name="second_type">二级分类</string>
    <string name="money_management">理财</string>
    <string name="dining">餐饮</string>
    <string name="daily">日常</string>
    <string name="shopping">购物</string>
    <string name="dress">服饰</string>
    <string name="digital">数码</string>
    <string name="entertainment">娱乐</string>
    <string name="family">家庭</string>
    <string name="parenting">育儿</string>
    <string name="car">汽车</string>
    <string name="interpersonal">人情</string>
    <string name="calendar">日历</string>
    <string name="january">一月</string>
    <string name="february">二月</string>
    <string name="march">三月</string>
    <string name="april">四月</string>
    <string name="may">五月</string>
    <string name="june">六月</string>
    <string name="july">七月</string>
    <string name="august">八月</string>
    <string name="september">九月</string>
    <string name="october">十月</string>
    <string name="november">十一月</string>
    <string name="december">十二月</string>
    <string name="change_to_second_type">改为二级分类</string>
    <string name="change_to_first_type">改为一级分类</string>
    <string name="move_to_other_first_type">移动到其它一级分类</string>
</resources>