<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="toolbar">

    <item
        android:id="@+id/search"
        android:icon="@drawable/vector_baseline_search_24"
        android:iconTint="@color/color_on_primary"
        android:title="@string/search"
        app:iconTint="@color/color_on_primary"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

    <item
        android:id="@+id/calendar"
        android:icon="@drawable/vector_calendar_24"
        android:iconTint="@color/color_on_primary"
        android:title="@string/calendar"
        app:iconTint="@color/color_on_primary"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

    <item
        android:id="@+id/my_asset"
        android:icon="@drawable/vector_asset_24"
        android:iconTint="@color/color_on_primary"
        android:title="@string/my_asset"
        app:iconTint="@color/color_on_primary"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

</menu>