<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="toolbar">

    <item
        android:id="@+id/edit"
        android:icon="@drawable/vector_baseline_edit_24"
        android:iconTint="@color/color_on_primary"
        android:title="@string/edit"
        app:iconTint="@color/color_on_primary"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/vector_baseline_delete_24"
        android:iconTint="@color/color_on_primary"
        android:title="@string/delete"
        app:iconTint="@color/color_on_primary"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/vector_baseline_more_vert_24"
        android:iconTint="@color/color_on_primary"
        android:title="@string/more"
        app:iconTint="@color/color_on_primary"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />

</menu>