<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="cn.wj.android.cashbook.ui.type.viewmodel.EditTypeMenuViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_sheet_dialog_background"
        android:orientation="vertical"
        tools:layout_gravity="bottom">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="?selectableItemBackground"
            android:bind_onClick="@{viewModel.onEditClick}"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/spacing_big"
            android:paddingEnd="@dimen/spacing_big"
            android:text="@string/edit"
            android:textAppearance="?attr/textAppearanceListItem" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="?selectableItemBackground"
            android:bind_onClick="@{viewModel.onDeleteClick}"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/spacing_big"
            android:paddingEnd="@dimen/spacing_big"
            android:text="@string/delete"
            android:textAppearance="?attr/textAppearanceListItem" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="?selectableItemBackground"
            android:bind_onClick="@{viewModel.onChangeToSecondTypeClick}"
            android:bind_visibility="@{viewModel.firstType}"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/spacing_big"
            android:paddingEnd="@dimen/spacing_big"
            android:text="@string/change_to_second_type"
            android:textAppearance="?attr/textAppearanceListItem" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="?selectableItemBackground"
            android:bind_onClick="@{viewModel.onChangeToFirstTypeClick}"
            android:bind_visibility="@{!viewModel.firstType}"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/spacing_big"
            android:paddingEnd="@dimen/spacing_big"
            android:text="@string/change_to_first_type"
            android:textAppearance="?attr/textAppearanceListItem"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="?selectableItemBackground"
            android:bind_onClick="@{viewModel.onMoveToOtherFirstTypeClick}"
            android:bind_visibility="@{!viewModel.firstType}"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/spacing_big"
            android:paddingEnd="@dimen/spacing_big"
            android:text="@string/move_to_other_first_type"
            android:textAppearance="?attr/textAppearanceListItem"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="?selectableItemBackground"
            android:bind_onClick="@{viewModel.onStatisticsClick}"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/spacing_big"
            android:paddingEnd="@dimen/spacing_big"
            android:text="@string/statistics_data"
            android:textAppearance="?attr/textAppearanceListItem" />

    </LinearLayout>

</layout>